# longomatch

./: LongoMatch.mds  Makefile.am  Makefile.win32  NEWS  RELEASE  autogen.sh  configure.ac
EsyPlayImport/: EsyPlayImport.cs  EsyPlayImport.mdp  Makefile.am
LongoMatch/: Main.cs  Makefile.am  esyplay.desktop.in.in  esyplay.in
LongoMatch.Addins/: AddinsManager.cs  LongoMatch.Addins.mdp  Makefile.am
LongoMatch.Addins.COE/: ExcelExporter.cs
LongoMatch.Addins/ExtensionPoints/: IImportProject.cs
LongoMatch.Core/: Config.cs  LongoMatch.Core.mdp  Makefile.am
LongoMatch.Core/Common/: CaptureSettings.cs  Constants.cs  Device.cs  EncodingProfiles.cs  Enums.cs  Image.cs  PlayList.cs  PlaysFilter.cs
LongoMatch.Core/Handlers/: Handlers.cs
LongoMatch.Core/Interfaces/: IPlayList.cs
LongoMatch.GUI/: CategoriesFilter.cs  LongoMatch.GUI.mdp  Makefile.am  PlaysSelectionWidget.cs
LongoMatch.GUI.Multimedia/: LongoMatch.GUI.Multimedia.mdp  Makefile.am
LongoMatch.Multimedia/: LongoMatch.Multimedia.dll.config.in  LongoMatch.Multimedia.mdp  Makefile.am  MultimediaFactory.cs
LongoMatch.Services/: LongoMatch.Services.mdp
debian/: control
images/: Makefile.am
libcesarplayer/: Makefile.am  bacon-video-widget-gst-0.10.c  bacon-video-widget.h  common.h  gst-camera-capturer.c  gst-camera-capturer.h  gst-remuxer.c  gst-remuxer.h  gst-video-editor.c  liblongomatch.mdp  main.c  test-editor.c  test-remuxer.c  video-utils.c  video-utils.h
po/: LINGUAS  POTFILES.in  POTFILES.skip  cs.po  el.po  es.po  hu.po  nl.po  sl.po
tools/: deb-pkg.sh
win32/: deploy_win32.py
(+124 files in other folders)
